Fix alignment of estimate button

--- a/www_src/styles/main.scss
+++ b/www_src/styles/main.scss
@@ -69,5 +69,15 @@ i.pad-right {
     margin-right: 0.25em;
 }
 
+.block {
+    display: block;
+}
+
+//the estimate button's siblings are a little short
+.btn-estimate {
+    height: 30px;
+    padding: 4px 12px;
+}
+
 
 @import 'includes/sidebar';
